deploy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glob
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: glob
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: glob
    spec:
      containers:
        - name: glob
          image: ghcr.io/baarsgaard/glob
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - mountPath: /globs
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: glob-data
