deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glob
  labels:
    app.kubernetes.io/name: glob
spec:
  selector:
    app.kubernetes.io/name: glob
  ports:
    - name: http
      port: 80
      targetPort: http
