deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glob
  labels:
    app.kubernetes.io/name: glob
    app.kubernetes.io/component: ingress
spec:
  rules:
    - host: glob.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: glob
                port:
                  name: http
